--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@
 
 .container {
     width: 100%;
-    height: 400px;
+    height: 100vh;
     justify-content: center;
     flex-direction: column;
     background-color: #222;
